adding metric metric plots without thresholds
