# app/src/api/models/index.ts
@@ -16,8 +16,10 @@ export * from './ExperimentConfigItemSimilarity';
 export * from './ExperimentIntersectionCount';
 export * from './ExperimentIntersectionItem';
 export * from './ExperimentIntersectionItemAllOf';
+export * from './ExperimentSimilarityConfig';
 export * from './ExperimentValues';
 export * from './FileResponse';
+export * from './InlineObject';
 export * from './Metric';
 export * from './MetricsEnum';
 export * from './SimilarityThresholdFunction';
