# wrapper/src/api/server/types/index.ts
@@ -24,9 +24,11 @@ export * from './ExperimentIntersectionCount';
 export * from './ExperimentIntersectionItem';
 export * from './ExperimentIntersectionItemAllOf';
 export * from './ExperimentRequests';
+export * from './ExperimentSimilarityConfig';
 export * from './ExperimentValues';
 export * from './ExperimentValuesSoftKPIs';
 export * from './FileResponse';
+export * from './InlineObject';
 export * from './Metric';
 export * from './MetricsEnum';
 export * from './SimilarityThresholdFunction';
